--- a/sample.ipynb
+++ b/sample.ipynb
@@ -1,4 +1,6 @@
-x= eval(input('Enter  the x value'))
-y= eval(input('Enter  the y value'))
-z=x+y
-print(z)
+{
+ "cells": [],
+ "metadata": {},
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
